secrets dir + jwt generation script

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,8 +8,8 @@ http {
         listen 57958;
         listen 57959 ssl;
         server_name flexiprocity.rpm.cc;
-        ssl_certificate fullchain.pem;
-        ssl_certificate_key privkey.pem;
+        ssl_certificate ../secrets/ssl/fullchain.pem;
+        ssl_certificate_key ../secrets/ssl/privkey.pem;
         location / {
             root ../frontend;
         }
