--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,9 @@ http {
         server_name flexiprocity.rpm.cc;
         ssl_certificate ../secrets/ssl/fullchain.pem;
         ssl_certificate_key ../secrets/ssl/privkey.pem;
+        location /login {
+            proxy_pass http://localhost:5001/login;
+        }
         location / {
             root ../frontend;
         }
