db schema + api + api login

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,10 @@ daemon off;
 pid var/run/nginx.pid;
 http {
     access_log var/log/access.log;
+    map $cookie_jwt $authorization {
+        "" "";
+        default "Bearer $cookie_jwt";
+    }
     server {
         listen 57958;
         listen 57959 ssl;
@@ -12,6 +16,10 @@ http {
         ssl_certificate_key ../secrets/ssl/privkey.pem;
         location /login {
             proxy_pass http://localhost:5001/login;
+        }
+        location /graphql {
+            proxy_set_header Authorization "$authorization";
+            proxy_pass http://localhost:5000/graphql;
         }
         location / {
             root ../frontend;
