prettier Facebook login button

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,11 @@ daemon off;
 pid var/run/nginx.pid;
 http {
     access_log var/log/access.log;
+    types {
+        text/css css;
+        text/html html;
+        application/javascript js;
+    }
     map $cookie_jwt $authorization {
         "" "";
         default "Bearer $cookie_jwt";
