allow graphiql to be accessed on the same host
This means it has access to the cookies, so it can make authenticated
requests.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,9 @@ http {
     }
     server {
         listen 57958;
+        listen [::]:57958;
         listen 57959 ssl;
+        listen [::]:57959 ssl;
         server_name flexiprocity.rpm.cc;
         ssl_certificate ../secrets/ssl/fullchain.pem;
         ssl_certificate_key ../secrets/ssl/privkey.pem;
@@ -25,6 +27,9 @@ http {
         location /graphql {
             proxy_set_header Authorization "$authorization";
             proxy_pass http://localhost:5000/graphql;
+        }
+        location /graphiql {
+            proxy_pass http://localhost:5000/;
         }
         location / {
             root ../frontend;
