--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -36,14 +36,14 @@ library
       MakeJwt
     build-depends:
       aeson,
-      base ^>=4.16.4.0,
+      base >= 4.16.4.0 && < 4.18,
       bytestring ^>=0.11.4.0,
       containers ^>=0.6.5.1,
       jwt ^>=0.11.0,
       req ^>=3.13.0,
       servant ^>=0.19.1,
       servant-server ^>=0.19.1,
-      text ^>=1.2.5.0,
+      text >=1.2.5.0 && < 2.1,
       time ^>=1.11.1.1,
       wai ^>=3.2.3,
       wai-cors ^>=0.2.7,
@@ -58,5 +58,5 @@ executable auth-server
     -- other-extensions:
     build-depends:
       auth-server,
-      base ^>=4.16.4.0,
+      base >= 4.16.4.0 && < 4.18,
     hs-source-dirs:   app
