--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,6 +33,7 @@ http {
         }
         location / {
             root ../frontend;
+            try_files $uri /index.html =404;
         }
     }
 }
