--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,8 @@ http {
             proxy_pass http://localhost:5000/;
         }
         location / {
+            gzip on;
+            gzip_types text/css application/javascript;
             root ../frontend;
             try_files $uri /index.html =404;
         }
