redirect http to https

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,9 +13,21 @@ http {
         "" "";
         default "Bearer $cookie_jwt";
     }
+    # Try to map the http port to the https port, but in production we'll often
+    # map the port numbers to something else entirely; assume the default port
+    # in that case.
+    map $http_host $https_host {
+        ~^(.*):57958$ "$1:57959";
+        default $http_host;
+    }
     server {
         listen 57958;
         listen [::]:57958;
+        location / {
+            return 308 https://$https_host$request_uri;
+        }
+    }
+    server {
         listen 57959 ssl;
         listen [::]:57959 ssl;
         server_name flexiprocity.rpm.cc;
