--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -39,7 +39,10 @@ library
       base >= 4.16.4.0 && < 4.18,
       bytestring ^>=0.11.4.0,
       containers ^>=0.6.5.1,
+      cryptonite ^>=0.30,
       jwt ^>=0.11.0,
+      memory ^>=0.18.0,
+      mtl ^>=2.2,
       req ^>=3.13.0,
       servant ^>=0.19.1,
       servant-server ^>=0.19.1,
