route gateway requests

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,6 +43,9 @@ http {
         location /graphiql {
             proxy_pass http://localhost:5000/;
         }
+        location /gateway {
+            proxy_pass http://localhost:57960/;
+        }
         location / {
             gzip on;
             gzip_types text/css application/javascript;
