allow non-login requests to auth-server

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,8 +33,8 @@ http {
         server_name flexiprocity.rpm.cc;
         ssl_certificate ../secrets/ssl/fullchain.pem;
         ssl_certificate_key ../secrets/ssl/privkey.pem;
-        location /login {
-            proxy_pass http://localhost:5001/login;
+        location /auth/ {
+            proxy_pass http://localhost:5001/;
         }
         location /graphql {
             proxy_set_header Authorization "$authorization";
