make PR builds more cached, re-enable them

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -2,6 +2,7 @@ on:
   push:
     tags:
       - v*
+  pull_request:
 
 permissions:
   contents: read
@@ -23,5 +24,7 @@ jobs:
           context: .
           push: ${{ github.event_name == 'push' }}
           tags: ghcr.io/bmillwood/flexiprocity:${{ github.sha }}
-          cache-from: type=gha
+          cache-from: |
+            type=gha
+            type=gha,scope=main
           cache-to: type=gha,mode=max
