--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -34,15 +34,19 @@ library
       Api
       Facebook
       MakeJwt
+      Twitter
     build-depends:
       aeson,
       base >= 4.16.4.0 && < 4.18,
       bytestring ^>=0.11.4.0,
       containers ^>=0.6.5.1,
       cryptonite ^>=0.30,
+      http-api-data ^>=0.4,
+      http-types ^>=0.12,
       jwt ^>=0.11.0,
       memory ^>=0.18.0,
       mtl ^>=2.2,
+      random ^>=1.2,
       req ^>=3.13.0,
       servant ^>=0.19.1,
       servant-server ^>=0.19.1,
