--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -40,7 +40,7 @@ library
       bytestring ^>=0.11.4.0,
       containers ^>=0.6.5.1,
       cryptonite ^>=0.30,
-      http-api-data ^>=0.4,
+      http-api-data >=0.4 && <0.7,
       http-types ^>=0.12,
       jwt ^>=0.11.0,
       memory ^>=0.18.0,
