Upgrade auth-server package versions
I did this after reading all the changelogs and they seemed harmless
enough, but I haven't checked exhaustively that all the new versions
build.

--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -37,23 +37,23 @@ library
     build-depends:
       aeson,
       base >= 4.16.4.0 && < 4.18,
-      bytestring ^>=0.11.4.0,
-      containers ^>=0.6.5.1,
+      bytestring >=0.11.4.0 && < 0.13,
+      containers >=0.6.5.1 && < 0.8,
       cryptonite ^>=0.30,
       http-api-data >=0.4 && <0.7,
       http-types ^>=0.12,
       jwt ^>=0.11.0,
       memory ^>=0.18.0,
-      mtl ^>=2.2,
+      mtl >=2.2 && <2.4,
       random ^>=1.2,
       req ^>=3.13.0,
-      servant ^>=0.19.1,
-      servant-server ^>=0.19.1,
-      text >=1.2.5.0 && < 2.1,
-      time ^>=1.11.1.1,
+      servant >=0.19.1 && <0.21,
+      servant-server >=0.19.1 && <0.21,
+      text >=1.2.5.0 && < 2.2,
+      time >=1.11.1.1 && <1.13,
       wai ^>=3.2.3,
       wai-cors ^>=0.2.7,
-      warp ^>=3.3.23,
+      warp >=3.3.23 && <3.5,
     hs-source-dirs:   src
 
 executable auth-server
