--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -2,8 +2,10 @@ cabal-version:      3.4
 
 name:               auth-server
 version:            0.1.0.0
-synopsis:           Server which provides jwts
--- description:
+synopsis:           Server which provides jwts for flexiprocity
+description:
+  The auth-server translates authentiction against third-party providers
+  (currently just Facebook) into a JWT cookie that the frontend can verify.
 license:            BSD-3-Clause
 license-file:       LICENSE
 author:             Ben Millwood
