modifying the workflow retriggers it

--- a/.github/workflows/build-auth-server.yml
+++ b/.github/workflows/build-auth-server.yml
@@ -2,6 +2,7 @@ name: Build auth-server
 on:
   push:
     paths:
+      - .github/workflows/build-auth-server.yml
       - auth-server/**
 
 # Below copies significantly from
