--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -46,7 +46,7 @@ http {
         ssl_certificate ../secrets/ssl/fullchain.pem;
         ssl_certificate_key ../secrets/ssl/privkey.pem;
         location /auth/ {
-            proxy_pass http://localhost:5001/;
+            proxy_pass http://127.0.0.1:5001/;
         }
         location /graphql {
             proxy_set_header Authorization "$authorization";
