--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -47,6 +47,7 @@ http {
         ssl_certificate_key ../secrets/ssl/privkey.pem;
         location /auth/ {
             proxy_pass http://127.0.0.1:5001/;
+            proxy_set_header X-Forwarded-Host $http_host;
         }
         location /graphql {
             proxy_set_header Authorization "$authorization";
