Switch to jose-jwt
This is already a dependency of oidc-client, so this means a smaller
dependency footprint overall

--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -43,12 +43,14 @@ library
       bytestring >=0.11.4.0 && < 0.13,
       containers >=0.6.5.1 && < 0.8,
       cookie ^>=0.5,
-      cryptonite ^>=0.30,
+      crypton >=0.30 && < 1.1,
+      crypton-x509 ^>= 1.7,
+      crypton-x509-store ^>= 1.6,
       http-api-data >=0.4 && <0.7,
       http-client ^>= 0.7,
       http-client-tls ^>= 0.3,
       http-types ^>=0.12,
-      jwt ^>=0.11.0,
+      jose-jwt ^>=0.10.0,
       memory ^>=0.18.0,
       mtl >=2.2 && <2.4,
       oidc-client ^>= 0.8,
