--- a/meddler/meddler.cabal
+++ b/meddler/meddler.cabal
@@ -40,6 +40,7 @@ library
       postgresql-simple ^>= 0.7,
       text ^>= 2.0,
       token-bucket ^>= 0.1,
+      uuid-types ^>= 1.0,
     hs-source-dirs:   src
 
 executable meddler
