--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -34,6 +34,7 @@ library
     exposed-modules:  AuthServer
     other-modules:
       Api
+      Diagnose
       Facebook
       Google
       MakeJwt
