--- a/meddler/meddler.cabal
+++ b/meddler/meddler.cabal
@@ -19,6 +19,7 @@ common warnings
 common language
     default-language: GHC2021
     default-extensions:
+      BlockArguments
       DataKinds
       DeriveAnyClass
       DerivingStrategies
@@ -30,17 +31,23 @@ library
     import:           warnings
     import:           language
     exposed-modules:  Meddler
-    --other-modules:
+    other-modules:
+      Inbox
     build-depends:
+      aeson >= 2.1 && < 2.3,
       amazonka ^>= 2.0,
       amazonka-ses ^>= 2.0,
       async ^>= 2.2,
       base ^>= 4.18,
+      bytestring >=0.11.4.0 && < 0.13,
+      http-types ^>=0.12,
       lens ^>= 5.2,
       postgresql-simple ^>= 0.7,
       text ^>= 2.0,
       token-bucket ^>= 0.1,
       uuid-types ^>= 1.0,
+      wai ^>=3.2.3,
+      warp >=3.3.23 && <3.5,
     hs-source-dirs:   src
 
 executable meddler
