--- a/meddler/meddler.cabal
+++ b/meddler/meddler.cabal
@@ -41,9 +41,9 @@ library
       base ^>= 4.18,
       bytestring >=0.11.4.0 && < 0.13,
       http-types ^>=0.12,
-      lens ^>= 5.2,
+      lens >= 5.2 && < 5.4,
       postgresql-simple ^>= 0.7,
-      text ^>= 2.0,
+      text >=1.2.5.0 && < 2.2,
       token-bucket ^>= 0.1,
       uuid-types ^>= 1.0,
       wai ^>=3.2.3,
