address another secret in auth-server

--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -43,6 +43,7 @@ library
       Facebook
       Google
       MakeJwt
+      Secrets
     build-depends:
       aeson >= 2.1 && < 2.3,
       base >= 4.16.4.0 && < 4.19,
