--- a/nginx/flexiprocity.conf.template
+++ b/nginx/flexiprocity.conf.template
@@ -16,7 +16,7 @@ server {
     listen 57959 ssl default_server;
     listen [::]:57959 ssl default_server;
     ssl_certificate SSL_DIR/fullchain.pem;
-    ssl_certificate_key SSL_DIR/privkey.pem;
+    ssl_certificate_key SSL_DIR/key.pem;
     return 444; # nginx-specific special code to just close the connection
 }
 server {
@@ -32,7 +32,7 @@ server {
     listen [::]:57959 ssl;
     server_name flexiprocity.rpm.cc local.rpm.cc reciprocity.rpm.cc;
     ssl_certificate SSL_DIR/fullchain.pem;
-    ssl_certificate_key SSL_DIR/privkey.pem;
+    ssl_certificate_key SSL_DIR/key.pem;
     location /auth/ {
         proxy_pass http://127.0.0.1:5001/;
         proxy_set_header X-Forwarded-Host $http_host;
