fetch DID documents

--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -51,6 +51,7 @@ library
     Secrets
     Sessions
     Sentry
+    StructuralAeson
   build-depends:
     aeson >= 2.1 && < 2.3,
     base >= 4.16.4.0 && < 4.19,
