--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -30,11 +30,6 @@ common language
     OverloadedStrings
   -- other-extensions:
 
-flag pre_crypton
-  description: use pre-crypton versions of deps
-  manual: False
-  default: False
-
 library
   import:           warnings
   import:           language
@@ -58,10 +53,14 @@ library
     bytestring >=0.11.4.0 && < 0.13,
     containers >=0.6.5.1 && < 0.8,
     cookie >=0.4 && <0.6,
+    crypton >=0.30 && < 1.1,
+    crypton-x509 ^>= 1.7,
+    crypton-x509-store ^>= 1.6,
     http-api-data >=0.4 && <0.7,
     http-client ^>= 0.7,
     http-client-tls ^>= 0.3,
     http-types ^>=0.12,
+    jose ^>=0.11,
     memory ^>=0.18.0,
     mtl >=2.2 && <2.4,
     network-uri ^>= 2.6,
@@ -77,19 +76,6 @@ library
     wai-cors ^>=0.2.7,
     warp >=3.3.23 && <3.5,
   hs-source-dirs:   src
-
-  if flag(pre_crypton)
-    build-depends:
-      cryptonite ^>=0.30,
-      x509 ^>= 1.7,
-      x509-store ^>= 1.6,
-      jose-jwt ^>= 0.9,
-  else
-    build-depends:
-      crypton >=0.30 && < 1.1,
-      crypton-x509 ^>= 1.7,
-      crypton-x509-store ^>= 1.6,
-      jose-jwt ^>= 0.10,
 
 executable auth-server
   import:           warnings
