--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -50,6 +50,7 @@ library
     Sentry
   build-depends:
     aeson >= 2.1 && < 2.3,
+    async ^>= 2.2,
     base >= 4.16.4.0 && < 4.19,
     bluesky-tools ^>= 0.4,
     bytestring >=0.11.4.0 && < 0.13,
