--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -65,7 +65,7 @@ library
     http-types ^>=0.12,
     jose ^>=0.11,
     memory ^>=0.18.0,
-    lens ^>=5.3,
+    lens >= 5.2 && < 5.4,
     mtl >=2.2 && <2.4,
     network-uri ^>= 2.6,
     oidc-client ^>= 0.8,
