icons to indicate people's origins

--- a/nginx/standalone.conf
+++ b/nginx/standalone.conf
@@ -9,6 +9,7 @@ http {
         text/css css;
         text/html html;
         application/javascript js;
+        image/svg+xml svg;
     }
     include flexiprocity.conf;
 }
