work around Sec-Fetch-Site check

--- a/auth-server/auth-server.cabal
+++ b/auth-server/auth-server.cabal
@@ -52,6 +52,8 @@ library
     aeson >= 2.1 && < 2.3,
     async ^>= 2.2,
     base >= 4.16.4.0 && < 4.19,
+    blaze-html >= 0.9,
+    blaze-markup >= 0.8,
     bluesky-tools ^>= 0.6,
     bytestring >=0.11.4.0 && < 0.13,
     containers >=0.6.5.1 && < 0.8,
@@ -73,6 +75,7 @@ library
     raven-haskell ^>=0.1,
     req ^>=3.13.0,
     servant >=0.19.1 && <0.21,
+    servant-blaze ^>= 0.9,
     servant-server >=0.19.1 && <0.21,
     text >=1.2.5.0 && < 2.2,
     time >=1.11.1.1 && <1.15,
